ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Related_Product__c/Related_Product__c.object-meta.xml
<CustomObject>
    <description>This is an object that allows users to associate multiple products to a claims case and capture additional details for these products.</description>
    <label>Related Product</label>
    <nameField>
        <displayFormat>RP-{0000000000}</displayFormat>
        <label>Related Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>