ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Related_Product__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is a parent field on this object. This is required.</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Case Products</relationshipLabel>
    <relationshipName>Related_Products</relationshipName>
    <type>Lookup</type>
</CustomField>