ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Related_Product__c/fields/Legacy_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Id__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Used for import from WCMS system</inlineHelpText>
    <label>Legacy Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>