ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Related_Product__c/fields/Membrane_Type__c.field-meta.xml
<CustomField>
    <fullName>Membrane_Type__c</fullName>
    <description>This is to indicate the membrane type for the warranty related products.</description>
    <label>Membrane Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Roofing</fullName>
            </value>
            <value>
                <fullName>Flashing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>