ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Related_Product__c/fields/Number_of_Plies__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Plies__c</fullName>
    <description>Number of plies for warranty products</description>
    <label>Number of Plies</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>