ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Related_Product__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Records the product related to the claim case.</description>
    <label>Product</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Product is either inactive or is a legacy product</errorMessage>
        <filterItems>
            <field>Product2.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Product2.Is_Legacy__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <infoMessage>Ensure that the selected product is neither inactive nor a legacy product</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Related Products</relationshipLabel>
    <relationshipName>Related_Products</relationshipName>
    <type>Lookup</type>
</CustomField>