ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Related_Product__c/fields/Product_Description__c.field-meta.xml
<CustomField>
    <fullName>Product_Description__c</fullName>
    <description>This displays the product description</description>
    <formula>Product__r.Description</formula>
    <label>Product Description</label>
    <type>Text</type>
</CustomField>