ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Related_Product__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <description>This is the quantity of the product that is needed for the settlement.</description>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>