ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Related_Product__c/fields/Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Measure__c</fullName>
    <description>This is the product&apos;s unit of measure</description>
    <formula>TEXT( Product__r.Unit_of_Measure__c )</formula>
    <label>Unit of Measure</label>
    <type>Text</type>
</CustomField>