ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Related_Product__c/fields/Warranty__c.field-meta.xml
<CustomField>
    <fullName>Warranty__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>associates the warranty</description>
    <label>Warranty</label>
    <referenceTo>Warranty__c</referenceTo>
    <relationshipLabel>Related Warranty Products</relationshipLabel>
    <relationshipName>Related_Warranty_Products</relationshipName>
    <type>Lookup</type>
</CustomField>