ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Related_Product__c/recordTypes/Settlement_Items.recordType-meta.xml
<RecordType>
    <fullName>Settlement_Items</fullName>
    <active>true</active>
    <label>Settlement Items</label>
</RecordType>