ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Related_Product__c/recordTypes/Warranty_Products.recordType-meta.xml
<RecordType>
    <fullName>Warranty_Products</fullName>
    <active>true</active>
    <description>Records products for warranty</description>
    <label>Warranty Products</label>
</RecordType>