ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Related_Product__c/validationRules/Case_sector_should_be_in_product_sectors.validationRule-meta.xml
<ValidationRule>
    <fullName>Case_sector_should_be_in_product_sectors</fullName>
    <active>true</active>
    <description>CLAIMSV2- 35. This validation rule checks if the product selected on the Related Products screen supports the sector to which the Case selected belongs.</description>
    <errorConditionFormula>NOT(
				OR(
								AND(
								RecordType.Name = &apos;Settlement Items&apos;,
        CONTAINS(Product__r.Sectors_Text__c,TEXT(Case__r.Sector__c))
           ),
							 RecordType.Name = &apos;Warranty Products&apos;
							)
)</errorConditionFormula>
    <errorMessage>Please choose a Product that matches the Case Sector</errorMessage>
</ValidationRule>