ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Related_Product__c/validationRules/Settlement_Item_Cant_be_modified.validationRule-meta.xml
<ValidationRule>
    <fullName>Settlement_Item_Cant_be_modified</fullName>
    <active>true</active>
    <description>Settlement Item can&apos;t be modified if the Parent Case has been approved for settlement.</description>
    <errorConditionFormula>Case__r.ClaimApproved__c</errorConditionFormula>
    <errorMessage>Offer has been approved. Settlement Item can&apos;t be created or modified.</errorMessage>
</ValidationRule>